# events

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy-frontend.yml
app/: api.py  config.py  db.py  extractor.py  models.py  pipeline.py  scraper.py  venue_config.py  venue_loader.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  i18n.tsx  index.css  types.ts
frontend/src/components/: About.tsx  EventList.tsx  Filters.tsx  VenueMap.tsx
scripts/: __init__.py  example.py
