[project]
name = "events-app"
version = "0.1.0"
description = "Live-house event aggregator for finding gigs by date, location, and price"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.0",
    "fastapi>=0.128.6",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "openai>=1.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]
